--- a/Kafka-Producer/build.gradle
+++ b/Kafka-Producer/build.gradle
@@ -12,6 +12,9 @@ configurations {
 	compileOnly {
 		extendsFrom annotationProcessor
 	}
+	flatDir{
+		dirs "lib"
+	}
 }
 
 repositories {
@@ -21,8 +24,9 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.kafka:spring-kafka'
+	compileOnly 'org.apache.kafka:kafka-clients:2.8.1'
+        implementation 'software.amazon.msk:aws-msk-iam-auth:1.1.1'
 	compileOnly 'org.projectlombok:lombok'
-	
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
