--- a/Kafka-Producer/src/main/resources/application.properties
+++ b/Kafka-Producer/src/main/resources/application.properties
@@ -1,1 +1,20 @@
 server.port=9091
+spring.datasource.url=jdbc:oracle:thin:@localhost:1522:SID
+spring.datasource.username=scott
+spring.datasource.password=tiger
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
+spring.jpa.show-sql=false
+spring.datasource.hikari.minimumIdle=10
+spring.datasource.hikari.maximumPoolSize=100
+spring.datasource.hikari.idleTimeout=300000
+spring.datasource.hikari.maxLifetime=2000000
+spring.datasource.hikari.connectionTimeout=30000
+spring.datasource.hikari.poolName=StreamsEnginePool
+spring.kafka.producer.bootstrap-servers=b-1.bancsggmsk.emidd7.c2.kafka.ap-south-1.amazonaws.com:9098
+spring.kafka.producer.properties.security.protocol=SASL_SSL
+spring.kafka.producer.properties.sasl.mechanism=AWS_MSK_IAM
+spring.kafka.producer.properties.sasl.jaas.config=software.amazon.msk.auth.iam.IAMLoginModule required;
+spring.kafka.producer.properties.sasl.client.callback.handler.class=software.amazon.msk.auth.iam.IAMClientCallbackHandler
+
+schedulerate=5000
